solr/solr/templates/statefulset.yaml
---
# Source: solr/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: solr
  labels:
    app.kubernetes.io/instance: solr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: solr
    app.kubernetes.io/version: 9.8.0
    helm.sh/chart: solr-9.5.3
    app.kubernetes.io/component: solr
  namespace: "default"
spec:
  podManagementPolicy: Parallel
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: solr
      app.kubernetes.io/name: solr
      app.kubernetes.io/component: solr
  serviceName: solr-headless
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/secrets: CHECKSUM
      labels:
        app.kubernetes.io/instance: solr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: solr
        app.kubernetes.io/version: 9.8.0
        helm.sh/chart: solr-9.5.3
        app.kubernetes.io/component: solr
    spec:
      serviceAccountName: solr
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: solr
                    app.kubernetes.io/name: solr
                    app.kubernetes.io/component: solr
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      enableServiceLinks: true
      containers:
        - name: solr
          image: docker.io/bitnami/solr:9.8.0-debian-12-r1
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - /scripts/setup.sh
          ports:
            - name: http
              containerPort: 8983
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 1536Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 1024Mi
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 40
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 15
            exec:
              command:
              - /bin/bash
              - -ec
              - |
                curl --silent --connect-timeout 15000 --user ${SOLR_ADMIN_USERNAME}:${SOLR_ADMIN_PASSWORD} http://localhost:${SOLR_PORT_NUMBER}/solr/admin/info/system | grep --quiet  '\"status\":0'
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 15
            exec:
              command:
              - /bin/bash
              - -ec
              - |
                curl --silent --connect-timeout 15000 --user ${SOLR_ADMIN_USERNAME}:${SOLR_ADMIN_PASSWORD} http://localhost:${SOLR_PORT_NUMBER}/api/node/health | grep --quiet  '\"status\":\"OK\"'
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/solr/server
              subPath: app-server-dir
            - name: empty-dir
              mountPath: /opt/bitnami/solr/logs
              subPath: app-logs-dir
            - name: empty-dir
              mountPath: /opt/bitnami/solr/tmp
              subPath: app-tmp-dir
            - name: scripts
              mountPath: /scripts/setup.sh
              subPath: setup.sh
            - name: data
              mountPath: /bitnami/solr
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: scripts
          configMap:
            name: solr-scripts
            defaultMode: 0755
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
        annotations:
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
