solr/solr/templates/svc.yaml
---
# Source: solr/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr
  namespace: "default"
  labels:
    app.kubernetes.io/instance: solr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: solr
    app.kubernetes.io/version: 9.8.0
    helm.sh/chart: solr-9.5.3
    app.kubernetes.io/component: solr
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 8983
      protocol: TCP
      targetPort: http
      nodePort: null
  selector:
    app.kubernetes.io/instance: solr
    app.kubernetes.io/name: solr
    app.kubernetes.io/component: solr
